// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Shotstack methods Shotstack.attach(), when passed a new container it should render cleaning previous container 1`] = `
<div
  id="new-container"
>
  <div
    class="shotstack-mergefield-form svelte-r93edu"
  >
    <section
      class="max-w-lg my-4 mx-auto border rounded-xl px-7 py-4 svelte-r93edu"
      data-cy="form-container"
    >
      <form
        class="svelte-r93edu"
      >
        <div
          class="mb-6 svelte-r93edu"
          data-cy="template-input-section"
        >
          <label
            class="text-teal-400 px-1 svelte-r93edu"
            for="json-input"
          >
            Paste template
          </label>
           
          <textarea
            class="w-full h-60 monospace border p-4 overflow-auto whitespace-pre resize-none svelte-r93edu"
            data-cy="template-input"
            id="json-input"
          />
        </div>
         
         
        <div
          class="svelte-r93edu"
          data-cy="merge-fields-input-section"
        >
          <h1
            class="text-teal-400 px-1 svelte-r93edu"
          >
            Modify Merge Values
          </h1>
           
          <div
            class="border p-4 mb-6 svelte-r93edu"
          >
            <div
              class="svelte-r93edu"
              data-cy="label-input"
            >
              <label
                class="block mb-2 monospace svelte-r93edu"
                for="NAME"
              >
                {{ NAME }} 
              </label>
               
              <input
                class="border w-full mb-3 pl-2 py-1 text-stone-500 svelte-r93edu"
                id="NAME"
                type="text"
              />
               
            </div>
          </div>
        </div>
      </form>
       
      <div
        class="svelte-r93edu"
        data-cy="result-section"
      >
        <h1
          class="text-teal-400 px-1 inline-block mr-2 svelte-r93edu"
        >
          Result
        </h1>
         
        <abbr
          class="svelte-r93edu"
          title="Copy to clipboard"
        >
          <img
            alt="copy-button"
            class="h-4 cursor-pointer inline mb-1 svelte-r93edu"
            src="[object Object]"
          />
        </abbr>
         
        <p
          class="h-60 overflow-auto border p-4 whitespace-pre monospace svelte-r93edu"
          data-cy="result"
        >
          {
  "merge": [
    {
      "find": "NAME",
      "replace": "world"
    }
  ],
  "timeline": {
    "tracks": [
      {
        "clips": [
          {
            "asset": {
              "type": "title",
              "text": "Hello {{ NAME }}",
              "style": "future"
            },
            "start": 0,
            "length": 5
          }
        ]
      }
    ]
  },
  "output": {
    "format": "mp4",
    "resolution": "hd"
  }
}
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`Testing Shotstack methods Shotstack.display(), container element should have property display = "block"  1`] = `
<div
  style="display: block;"
>
  <div
    class="shotstack-mergefield-form svelte-r93edu"
  >
    <section
      class="max-w-lg my-4 mx-auto border rounded-xl px-7 py-4 svelte-r93edu"
      data-cy="form-container"
    >
      <form
        class="svelte-r93edu"
      >
        <div
          class="mb-6 svelte-r93edu"
          data-cy="template-input-section"
        >
          <label
            class="text-teal-400 px-1 svelte-r93edu"
            for="json-input"
          >
            Paste template
          </label>
           
          <textarea
            class="w-full h-60 monospace border p-4 overflow-auto whitespace-pre resize-none svelte-r93edu"
            data-cy="template-input"
            id="json-input"
          />
        </div>
         
         
        <div
          class="svelte-r93edu"
          data-cy="merge-fields-input-section"
        >
          <h1
            class="text-teal-400 px-1 svelte-r93edu"
          >
            Modify Merge Values
          </h1>
           
          <div
            class="border p-4 mb-6 svelte-r93edu"
          >
            <div
              class="svelte-r93edu"
              data-cy="label-input"
            >
              <label
                class="block mb-2 monospace svelte-r93edu"
                for="NAME"
              >
                {{ NAME }} 
              </label>
               
              <input
                class="border w-full mb-3 pl-2 py-1 text-stone-500 svelte-r93edu"
                id="NAME"
                type="text"
              />
               
            </div>
          </div>
        </div>
      </form>
       
      <div
        class="svelte-r93edu"
        data-cy="result-section"
      >
        <h1
          class="text-teal-400 px-1 inline-block mr-2 svelte-r93edu"
        >
          Result
        </h1>
         
        <abbr
          class="svelte-r93edu"
          title="Copy to clipboard"
        >
          <img
            alt="copy-button"
            class="h-4 cursor-pointer inline mb-1 svelte-r93edu"
            src="[object Object]"
          />
        </abbr>
         
        <p
          class="h-60 overflow-auto border p-4 whitespace-pre monospace svelte-r93edu"
          data-cy="result"
        >
          {
  "merge": [
    {
      "find": "NAME",
      "replace": "world"
    }
  ],
  "timeline": {
    "tracks": [
      {
        "clips": [
          {
            "asset": {
              "type": "title",
              "text": "Hello {{ NAME }}",
              "style": "future"
            },
            "start": 0,
            "length": 5
          }
        ]
      }
    ]
  },
  "output": {
    "format": "mp4",
    "resolution": "hd"
  }
}
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`Testing Shotstack methods Shotstack.hide(), container element should have property display = "none" 1`] = `
<div
  style="display: none;"
>
  <div
    class="shotstack-mergefield-form svelte-r93edu"
  >
    <section
      class="max-w-lg my-4 mx-auto border rounded-xl px-7 py-4 svelte-r93edu"
      data-cy="form-container"
    >
      <form
        class="svelte-r93edu"
      >
        <div
          class="mb-6 svelte-r93edu"
          data-cy="template-input-section"
        >
          <label
            class="text-teal-400 px-1 svelte-r93edu"
            for="json-input"
          >
            Paste template
          </label>
           
          <textarea
            class="w-full h-60 monospace border p-4 overflow-auto whitespace-pre resize-none svelte-r93edu"
            data-cy="template-input"
            id="json-input"
          />
        </div>
         
         
        <div
          class="svelte-r93edu"
          data-cy="merge-fields-input-section"
        >
          <h1
            class="text-teal-400 px-1 svelte-r93edu"
          >
            Modify Merge Values
          </h1>
           
          <div
            class="border p-4 mb-6 svelte-r93edu"
          >
            <div
              class="svelte-r93edu"
              data-cy="label-input"
            >
              <label
                class="block mb-2 monospace svelte-r93edu"
                for="NAME"
              >
                {{ NAME }} 
              </label>
               
              <input
                class="border w-full mb-3 pl-2 py-1 text-stone-500 svelte-r93edu"
                id="NAME"
                type="text"
              />
               
            </div>
          </div>
        </div>
      </form>
       
      <div
        class="svelte-r93edu"
        data-cy="result-section"
      >
        <h1
          class="text-teal-400 px-1 inline-block mr-2 svelte-r93edu"
        >
          Result
        </h1>
         
        <abbr
          class="svelte-r93edu"
          title="Copy to clipboard"
        >
          <img
            alt="copy-button"
            class="h-4 cursor-pointer inline mb-1 svelte-r93edu"
            src="[object Object]"
          />
        </abbr>
         
        <p
          class="h-60 overflow-auto border p-4 whitespace-pre monospace svelte-r93edu"
          data-cy="result"
        >
          {
  "merge": [
    {
      "find": "NAME",
      "replace": "world"
    }
  ],
  "timeline": {
    "tracks": [
      {
        "clips": [
          {
            "asset": {
              "type": "title",
              "text": "Hello {{ NAME }}",
              "style": "future"
            },
            "start": 0,
            "length": 5
          }
        ]
      }
    ]
  },
  "output": {
    "format": "mp4",
    "resolution": "hd"
  }
}
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`Testing Shotstack methods Shotstack.remove(), should remove content of the container where the component is rendered on 1`] = `<div />`;

exports[`Testing Shotstack module entry point On initialization, should render the form inside the an element with id 'shotstack-form-field' if any 1`] = `
<div
  id="shotstack-form-field"
>
  <div
    class="shotstack-mergefield-form svelte-r93edu"
  >
    <section
      class="max-w-lg my-4 mx-auto border rounded-xl px-7 py-4 svelte-r93edu"
      data-cy="form-container"
    >
      <form
        class="svelte-r93edu"
      >
        <div
          class="mb-6 svelte-r93edu"
          data-cy="template-input-section"
        >
          <label
            class="text-teal-400 px-1 svelte-r93edu"
            for="json-input"
          >
            Paste template
          </label>
           
          <textarea
            class="w-full h-60 monospace border p-4 overflow-auto whitespace-pre resize-none svelte-r93edu"
            data-cy="template-input"
            id="json-input"
          />
        </div>
         
         
      </form>
       
      <div
        class="svelte-r93edu"
        data-cy="result-section"
      >
        <h1
          class="text-teal-400 px-1 inline-block mr-2 svelte-r93edu"
        >
          Result
        </h1>
         
        <abbr
          class="svelte-r93edu"
          title="Copy to clipboard"
        >
          <img
            alt="copy-button"
            class="h-4 cursor-pointer inline mb-1 svelte-r93edu"
            src="[object Object]"
          />
        </abbr>
         
        <p
          class="h-60 overflow-auto border p-4 whitespace-pre monospace svelte-r93edu"
          data-cy="result"
        >
          {
  "merge": []
}
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`Testing Shotstack module entry point Shotstack.render() should deploy the app inside target element 1`] = `
<div>
  <div
    class="shotstack-mergefield-form svelte-r93edu"
  >
    <section
      class="max-w-lg my-4 mx-auto border rounded-xl px-7 py-4 svelte-r93edu"
      data-cy="form-container"
    >
      <form
        class="svelte-r93edu"
      >
        <div
          class="mb-6 svelte-r93edu"
          data-cy="template-input-section"
        >
          <label
            class="text-teal-400 px-1 svelte-r93edu"
            for="json-input"
          >
            Paste template
          </label>
           
          <textarea
            class="w-full h-60 monospace border p-4 overflow-auto whitespace-pre resize-none svelte-r93edu"
            data-cy="template-input"
            id="json-input"
          />
        </div>
         
         
      </form>
       
      <div
        class="svelte-r93edu"
        data-cy="result-section"
      >
        <h1
          class="text-teal-400 px-1 inline-block mr-2 svelte-r93edu"
        >
          Result
        </h1>
         
        <abbr
          class="svelte-r93edu"
          title="Copy to clipboard"
        >
          <img
            alt="copy-button"
            class="h-4 cursor-pointer inline mb-1 svelte-r93edu"
            src="[object Object]"
          />
        </abbr>
         
        <p
          class="h-60 overflow-auto border p-4 whitespace-pre monospace svelte-r93edu"
          data-cy="result"
        >
          {
  "merge": []
}
        </p>
      </div>
    </section>
  </div>
</div>
`;
